# pymongrator

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mado.toml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release-please.yml  release.yml
docs/: cli.md  configuration.md  getting-started.md  index.md  writing-migrations.md
docs/api/: config.md  exceptions.md  loader.md  migration.md  ops.md  planner.md  runner.md  state.md
src/mongrator/: cli.py  config.py  exceptions.py  loader.py  migration.py  ops.py  planner.py  runner.py  state.py
src/mongrator/_templates/: migration.py.tmpl
tests/integration/: conftest.py  test_async_runner.py  test_sync_runner.py
tests/unit/: test_cli.py  test_config.py  test_exceptions.py  test_loader.py  test_migration.py  test_ops.py  test_planner.py  test_runner.py  test_state.py
