[project]
name = "mongrator"
version = "0.2.0"
description = "Lightweight MongoDB schema migration tool"
readme = "README.md"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Sasha Gerrand", email = "mongrator@sgerrand.dev" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
keywords = ["mongodb", "migration", "schema", "pymongo", "database"]
requires-python = ">=3.13"
dependencies = [
    "pymongo>=4.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[mongodb]>=4.0",
    "ty",
    "ruff>=0.9",
]

[project.scripts]
mongrator = "mongrator:main"

[project.urls]
Homepage = "https://github.com/sgerrand/mongrator"
Repository = "https://github.com/sgerrand/mongrator"
"Bug Tracker" = "https://github.com/sgerrand/mongrator/issues"
Changelog = "https://github.com/sgerrand/mongrator/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
